<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/record_speed_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/speed_panel"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/super_slow_speed_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/speed_super_slow"
        android:textColor="@color/speedTextNormal"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/slow_speed_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/speed_slow"
        android:textColor="@color/speedTextNormal"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/normal_speed_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/speed_normal"
        android:textColor="@color/app_default_color"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/fast_speed_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/speed_fast"
        android:textColor="@color/speedTextNormal"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/super_fast_speed_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/speed_super_fast"
        android:textColor="@color/speedTextNormal"
        android:textSize="15sp" />

</LinearLayout>
