<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="@dimen/dp10"
        android:text="@string/add_text"
        android:textColor="@color/lightgray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp20"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_video_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp5"
            android:layout_weight="1"
            android:background="@color/button_background"
            android:text="@string/video_title"
            android:textColor="@color/lightgray"
            android:textSize="@dimen/textSize_small" />

        <Button
            android:id="@+id/btn_video_time_addr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp5"
            android:layout_weight="1"
            android:background="@color/button_background"
            android:text="@string/video_time_addr"
            android:textColor="@color/lightgray"
            android:textSize="@dimen/textSize_small" />

        <Button
            android:id="@+id/btn_video_text_effect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp5"
            android:layout_weight="1"
            android:background="@color/button_background"
            android:text="@string/video_text_effect"
            android:textColor="@color/lightgray"
            android:textSize="@dimen/textSize_small" />
    </LinearLayout>

</LinearLayout>